# ompy

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yaml  .travis.yml  4d_reponse_test.py  Dockerfile  Dockerfile_pymc  MANIFEST.in  README.md  __init__.py  _error_propagation.py  _library.py  _matrix_analysis.py  check_env.py  compile-rhosigchi_f2py_origvar.sh  devel.org  entrypoint.sh  example_pyma_run.py  firstgen.py  notes.org  oslo_method.py  plot_mama-diff.py  plot_mama-project.py  plot_mama.py  pyma.py  pyma_fit.py  pyma_lib.py  pyma_ma.py  pyma_matrix.py  pyma_mc.py  pymama.py  pyproject.toml  rebin_with_arrays.py  release_note.md  requirements.txt  response-verify_normalization.py  response.py  (+15 more)
.binder/: Dockerfile
binder/: Dockerfile
docs/: requirements.txt
ensemble/: generate_ensemble.py
example_data/: Dy164_raw.m  discrete_levels_Dy164.txt  test_PeakFit.m
notebooks/: 120Sn_raw_without_bg.m  120Sn_raw_without_bg.npz  Arrray dev.ipynb  Firstgendev.ipynb  Julia Experiments.ipynb  Minimal.ipynb  Response_dev.ipynb  Untitled.ipynb  Untitled1.ipynb  Zn70.ipynb  demonstration.ipynb  develop.ipynb  dy_raw.npy  example.ipynb  getting_started.ipynb  m.m  minimal_working_examples.ipynb  model_op.py  testing.ipynb  uncertanty_by_counts.ipynb  unfolded.npy  unumpy_test.ipynb
ompy/: __init__.py  abstract_load_saver.py  abstract_normalizer.py  abstractarray.py  action.py  clicker.py  compton_subtraction_method.py  computation_context.py  constants.py  decomposition.c  decomposition.pyx  detector.py  ensemble.py  ensembleNormalizer.py  ensemble_normalizer.py  error_finder.py  error_propagation.py  examples.py  extractor.py  filehandling.py  first_generation_method.py  firstgeneration.py  fit_rho_T.py  gauss_smoothing.c  gauss_smoothing.html  gauss_smoothing.pyx  geometry.py  header.py  helpers.py  hooks.py  library.py  matrix.py  matrix_analysis.py  matrixstate.py  modelcontext.py  models.py  multinest_setup.py  new_spinfunctions.py  nndc.py  norm_gsf.py  (+41 more)
oslo_method_python/: __init__.py  constants.py  error_propagation.py  first_generation_method.py  first_generation_method_reimplementation.py  fit_rho_T.py  fit_rho_T.pyx  library.py  matrix_analysis.py  oslo_method.py  rebin.c  rebin.pyx  response.py  response.pyx  rhosig.pyx  unfold.py
rhosigchi_f2py/: compile-rhosigchi_f2py_importvar.sh  (+3 more)
(+377 files in other folders)
